--- a/HW1/hw1.tex
+++ b/HW1/hw1.tex
@@ -5,6 +5,10 @@
 \usepackage[all,arc]{xy}
 \usepackage{enumerate}
 \usepackage{mathrsfs}
+\usepackage{subcaption}
+\usepackage{graphicx}
+\usepackage{caption}
+
 
 %--------Theorem Environments--------
 %theoremstyle{plain} --- default
@@ -58,16 +62,28 @@ $$\log P(w_1, \dots, w_N) = \sum_{i=1}^N \log P(w_i|w_{i-1}, w_{i-2}) = \sum_{i=
 Thus, as $\alpha\rightarrow\infty$, the terms all go to $1/|V|$, as the smoothing term dominates the count terms. In this case we end up with a log-likelihood of $-N\log|V|$. Note that with $\alpha = 0$, we have the MLE estimate, so that the log-likelihood of the training corpus must be greatest at that $\alpha = 0$. Thus, we expect a decline in log-likelihood starting from the MLE value at $\alpha = 0$ to the limiting value of $-N\log|V|$ as $\alpha \rightarrow \infty$, as sketched in {\bf Figure 1}.
 
 \begin{figure}
-	\caption{1.1}
+	\includegraphics[width=0.6\textwidth]{1-1.jpg}
+	\caption{Sketch of log-likelihood of training corpus.}
 \end{figure}
 
 \subsection{} On a large test corpus, there will almost surely be a tri-gram that is not seen in the training corpus. Thus, for this tri-gram, $p(w_t|w_{t-2},w_{t-1}) = 0$ with no smoothing, so the log-likelihood of the test corpus will be $-\infty$ with $\alpha = 0$.
 
 Given the non-trivial performance of tri-gram models in practice, it is also likely that for some smoothing factor $0 <\alpha < \infty$, the log-likelihood will be greater (i.e. model performs better) than that of a uniform uni-gram model, which is what the $\alpha\rightarrow\infty$ limit represents. Thus, for some values of $\alpha$, we must have $\log P(w_1, \dots, w_N) > -N\log|V|$, where $N$ is now the size of the test corpus, and so a curve such as in {\bf Figure 2} may result.
 
+\begin{figure}
+	\includegraphics[width=0.6\textwidth]{1-2.jpg}
+	\caption{Sketch of log-likelihood of test corpus.}
+\end{figure}
+
+
 \subsection{} The perplexity is simply:
 $$\text{perp} = 2^{-\frac{1}{N} \log P(w_1, \dots, w_N)}$$
 so as $\alpha \rightarrow\infty$ and $P(w_1, \dots, w_N) \rightarrow -N\log |V|$, $\text{perp} \rightarrow |V|$ is the limiting value. But when $\alpha = 0$, we had a $-\infty$ log-likelihood, which yields $\text{perp} = \infty$. Thus, we expect the perplexity value to behave as in {\bf Figure 3} as $\alpha$ varies, achieving a lower perplexity than a uniform uni-gram model with some non-zero smoothing factor.
+
+\begin{figure}
+	\includegraphics[width=0.6\textwidth]{1-3.jpg}
+	\caption{Sketch of perplexity of test corpus.}
+\end{figure}
 
 \subsection{} As $\alpha \rightarrow \infty$, we have for any tri-gram:
 $$p(w_t|w_{t-2},w_{t-1}) \rightarrow \frac{1}{|V|}$$
@@ -103,17 +119,51 @@ Using $\delta_i^x$, the stochastic gradient step for updating $v(w_{t-2})$ is:
 $$v(w_{t-2}) \leftarrow v(w_{t-2}) - \eta \nabla_{x} \log p_y[1:d] = v(w_{t-2}) - \eta (\delta_1^x, \dots, \delta_d^x)$$
 where the $[1:d]$ notation represents taking the first $d$ elements of the gradient vector. 
 
-\subsection{} (a)
+\subsection{} (a) The bi-gram model scored an average test log-likelihood of $-4.96$. On the other hand, using the best configuration of parameters (as reported below), we achieved an average test log-likelihood of $-4.618$.
 
-(b) We tested every combination for a number of different parameter values. Namely, we considered: $n = 2, 3, 5$, $d = 5, 10, 20$, and $m = 10, 30, 50$. We found that the best configuration in terms of development log-likelihood was $n=3, d = 5, m = 50$. The average test log-likelihood for these parameters was ...
+(b) We tested every combination for a number of different parameter values. Namely, we considered: $n = 2, 3, 5$; $d = 5, 10, 20$; and $m = 10, 30, 50$. We found that the best configuration in terms of development log-likelihood was $n=3, d = 5, m = 50$. The average test log-likelihood for these parameters was, as noted, was $-4.618$.
 
-(c) In {\bf Figure 3}, we plot the dependence of 
+(c) In {\bf Figure 4} and {\bf Figure 5}, we plot the dependence of the average log-likelihood on both the training set (4) and test set (5), where the legend depicts the word embedding dimension $d$ (i.e. $d = 5, 10, 20$). What is notable is that the average log-likelihood increases monotonically with $m$ on the training set, but decreases after a suitable value on the test set. This is because when $m$ increases, we have more parameters that we can fit, so that the model fits the training set better; but after a certain point, it begins to overfit to the training data. This is evident in Figure 5, where, for example $n = 3$, the average log-likelihood peaks at $ m = 30$ for all values of $d$, and declines afterward due to overfitting issues.
+
+Using the performance on the development set, which the model has not seen, in order to select the ``best" model helps to control for these issues. As visible in Figure 5, by selecting $n=3, d= 5, m = 50$, we actually do not end up choosing the model with the best average log-likelihood on the test set (as we evaluated on the development set), but the results on the test set are very close.
+
+\begin{figure}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\includegraphics[width=\textwidth]{code/hw1_train_n2.pdf}
+		\caption{$n=2$}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\includegraphics[width=\textwidth]{code/hw1_train_n3.pdf}
+		\caption{$n=3$}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\includegraphics[width=\textwidth]{code/hw1_train_n5.pdf}
+		\caption{$n=5$}
+	\end{subfigure}
+	\caption{Average log-likelihood on training set as a function of $m$ for different configurations.}
+\end{figure}
+
+\begin{figure}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\includegraphics[width=\textwidth]{code/hw1_test_n2.pdf}
+		\caption{$n=2$}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\includegraphics[width=\textwidth]{code/hw1_test_n3.pdf}
+		\caption{$n=3$}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\includegraphics[width=\textwidth]{code/hw1_test_n5.pdf}
+		\caption{$n=5$}
+	\end{subfigure}
+	\caption{Average log-likelihood on test set as a function of $m$ for different configurations.}
+\end{figure}
 
 \subsection{} (a) The neural network model will {\bf not} necessarily assign a zero/near-zero value to unseen words. This is because the embedding layer $v(w_{t})$ embeds the words, even unseen words, into a lower-dimensional (as opposed to one-hot) and dense vector. If an unseen word (or $n$-gram) is close in the dense space to another word which has been seen, it will have relatively close probability values to the seen word (i.e. non-zero). However, if the word is unseen, then the embedding vector is completely untrained, so that the embedding is most likely meaningless and distant from learned embeddings. In this case, the model will likely assign a near-zero probability to the unseen word (but as noted above, this need not be the case).
 
 (b) In a similar fashion, the model can assign a reasonable prediction for $w_t$, even if the specific preceding context did not appear in the training set. If the individual words $w_{t-i}$ were seen in training, then the embedding vectors $v(w_{t-i})$ will be trained, so the entire concatenation of vectors $[v(w_{t-1}) \cdots v(w_{t-n+1})]$ will have a reasonable value in the dense embedding space. Thus, a reasonable prediction for $w_t$ can be made in this situation.
 
-\subsection{}
+\subsection{} We again used the configuration $n=3, d = 5, m = 50$ on this task. We found that the trained model yielded an overall log-likelihood of $-35.06$ (i.e. average log-likelihood of $-4.38$) on the correct example, and $-43.36$ (average log-likelihood of $5.42$) on the incorrect example, so the correct example is more likely according to our model.
 
 \section{Recurrent Neural Language Models}
 
